remove using LinkedList
svn path=/trunk/; revision=50